Make Article Index page work + ArticleControleer add Create and its overload

--- a/backend/Portal.UI-MVC-Web/Views/Article/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/Index.cshtml
@@ -1,4 +1,15 @@
 ﻿@model ArticleIndexModel
 
+@{
+    Layout = "_Layout";
+}
+
+@section Styles {
+    <link href="~/css/materials.css" rel="stylesheet"/>
+}
+
 <h1>Articles</h1>
 
+<div class="table-view">
+    @await Html.PartialAsync("_ArticlePartial", Model)
+</div>
