add script section to _ArticlePartial

--- a/backend/Portal.UI-MVC-Web/Views/Article/AddOrEdit.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/AddOrEdit.cshtml
@@ -13,8 +13,7 @@
     }
 }
 
-
-@using(Html.BeginForm("AddOrEdit", "Home", FormMethod.Post))
+@using(Html.BeginForm("AddOrEdit", "Article", FormMethod.Post))
 {
     <div class="mb-2">
         <div class="d-flex flex-column">
