ArticleController finish Delete action + extract GetArticleIndexModel method

--- a/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
@@ -31,7 +31,7 @@
                     </a>
                 </td>
                 <td>
-                    <a class="btn btn-danger btn-delete" url="@Url.Action("Delete", "Article")" article-id="@article.Id">
+                    <a class="btn btn-danger btn-delete" url="@Url.Action("Delete", "Article")" data_id="@article.Id">
                         @Actions.Delete
                     </a>
                 </td>
