article-partail.js add jquery for article delete

--- a/backend/Portal.UI-MVC-Web/Views/Article/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/Index.cshtml
@@ -13,6 +13,6 @@
 
 <a asp-action="Create"></a>
 
-<div class="table-view">
+<div id="article-table-view">
     @await Html.PartialAsync("../Material/_ArticlePartial", Model)
 </div>
