--- a/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
@@ -2,7 +2,7 @@
 
 @model ArticleIndexModel
 
-<table class="table table-hover">
+<table class="table table-hover" id="article-table">
     <thead>
         <tr>
             <th scope="col">@Materials.Title</th>
@@ -31,7 +31,7 @@
                     </a>
                 </td>
                 <td>
-                    <a class="btn btn-danger btn-delete" url="@Url.Action("Delete", "Article")" data_id="@article.Id">
+                    <a class="btn btn-danger" url="@Url.Action("Delete", "Article")" data_id="@article.Id">
                         @Actions.Delete
                     </a>
                 </td>
