--- a/backend/Portal.UI-MVC-Web/Views/Article/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/Index.cshtml
@@ -14,5 +14,5 @@
 <a asp-action="Create"></a>
 
 <div id="article-table-view">
-    @await Html.PartialAsync("../Material/_ArticlePartial", Model)
+    @await Html.PartialAsync("_ArticlePartial", Model)
 </div>
