--- a/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
@@ -40,6 +40,7 @@
     </tbody>
 </table>
 
-@section Scripts{
-    <script src="~/jquery/partial/article-partial.js"></script>
+@section Scripts
+{
+    <script src="~/jquery/partial/partial.js"></script>
 }
