--- a/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
@@ -38,4 +38,8 @@
             </tr>
         }
     </tbody>
-</table>
+</table>  
+@if (Model.ArticleList.Any() is false)
+{
+    <h3 class="text-center">@Headings.NoData</h3>
+}
