AuthController create Register action and redirection mechanism

--- a/backend/Portal.UI-MVC-Web/Views/Article/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/Index.cshtml
@@ -3,8 +3,9 @@
 @model ArticleIndexModel
 
 @{
+    Context.Session.SetString("LastUrl", Context.Request.Path);
     Layout = "_Layout";
-    ViewData["Title"] = @Context.Request.RouteValues["action"];
+    ViewData["Title"] = Context.Request.RouteValues["action"];
 }
 
 @section Styles {
