Create BookIndexModel + start BookController

--- a/backend/Portal.UI-MVC-Web/Views/Article/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/Index.cshtml
@@ -5,7 +5,7 @@
 @{
     Context.Session.SetString("LastUrl", Context.Request.Path);
     Layout = "_Layout";
-    ViewData["Title"] = Context.Request.RouteValues["action"];
+    ViewData["Title"] = Context.Request.RouteValues["controller"];
 }
 
 @section Styles {
