--- a/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
@@ -8,8 +8,11 @@
             <th scope="col">@Materials.Title</th>
             <th scope="col">@Materials.Url</th>
             <th scope="col">@Materials.Published</th>
+            @if (User.Identity != null && User.Identity.IsAuthenticated)
+            {
             <th scope="col" />
             <th scope="col" />
+            }
         </tr>
     </thead>
     <tbody>
@@ -25,6 +28,8 @@
                 <td>
                     @article.Published
                 </td>
+                @if (User.Identity != null && User.Identity.IsAuthenticated)
+                {
                 <td class="d-flex flex-row-reverse">
                     <a asp-controller="Article" asp-action="AddOrEdit" asp-route-id="@article.Id" class="btn btn-secondary">
                         @Actions.Edit
@@ -35,6 +40,7 @@
                         @Actions.Delete
                     </a>
                 </td>
+                }
             </tr>
         }
     </tbody>
