Create _BookPartial for BookController + fill Material.resx with new values

--- a/backend/Portal.UI-MVC-Web/Views/Book/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Book/Index.cshtml
@@ -18,5 +18,5 @@
 <a asp-controller="Book" asp-action="AddOrEdit" class="btn btn-primary">@Actions.Create</a>
  
 <div id="article-table-view">
-    @await Html.PartialAsync("_ArticlePartial", Model)
+    @await Html.PartialAsync("_BookPartial", Model)
 </div>
