Add ajax for _BookPartial

--- a/backend/Portal.UI-MVC-Web/Views/Book/_BookPartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Book/_BookPartial.cshtml
@@ -2,7 +2,7 @@
 
 @model BookIndexModel
 
-<table class="table table-hover" id="article-table">
+<table class="table table-hover" id="book-table">
     <thead>
         <tr>
             <th scope="col">@Materials.Title</th>
