--- a/backend/Portal.UI-MVC-Web/Views/Book/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Book/Index.cshtml
@@ -17,6 +17,6 @@
 
 <a asp-controller="Book" asp-action="AddOrEdit" class="btn btn-primary">@Actions.Create</a>
  
-<div id="article-table-view">
+<div id="book-table-view">
     @await Html.PartialAsync("_BookPartial", Model)
 </div>
