--- a/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
@@ -8,11 +8,8 @@
             <th scope="col">@Materials.Title</th>
             <th scope="col">@Materials.Url</th>
             <th scope="col">@Materials.Published</th>
-            @if (User.Identity != null && User.Identity.IsAuthenticated)
-            {
             <th scope="col" />
             <th scope="col" />
-            }
         </tr>
     </thead>
     <tbody>
@@ -26,10 +23,8 @@
                     @article.Url
                 </td>
                 <td>
-                    @article.Published.Date
+                    @article.Published.Date.ToShortDateString()
                 </td>
-                @if (User.Identity != null && User.Identity.IsAuthenticated)
-                {
                 <td class="d-flex flex-row-reverse">
                     <a asp-controller="Article" asp-action="AddOrEdit" asp-route-id="@article.Id" class="btn btn-secondary">
                         @Actions.Edit
@@ -40,7 +35,6 @@
                         @Actions.Delete
                     </a>
                 </td>
-                }
             </tr>
         }
     </tbody>
