--- a/backend/Portal.UI-MVC-Web/Views/Book/AddOrEdit.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Book/AddOrEdit.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Portal.UI_MVC_Web.Resources
 
-@model ArticleDTO
+@model BookDTO
 
 @{
     if (Model.Id.Equals(default))
@@ -13,20 +13,34 @@
     }
 }
 
-@using(Html.BeginForm("AddOrEdit", "Article", FormMethod.Post))
+@using(Html.BeginForm("AddOrEdit", "Book", FormMethod.Post))
 {
+    if (Model.Authors == null)
+    {
+        Model.Authors = new List<string>();
+        Model.Authors.Add("");
+    }
+
     <div class="mb-2">
         <div class="d-flex flex-column">
             @Html.Label(@Materials.Title)
             @Html.TextBoxFor(m => m.Title)
         </div>
         <div class="d-flex flex-column">
-            @Html.Label(@Materials.Url)
-            @Html.TextBoxFor(m => m.Url)
+            @Html.Label(@Materials.PageCount)
+            @Html.TextBoxFor(m => m.PageCount)
+        </div>
+        <div class="d-flex flex-column">
+            @Html.Label(@Materials.Author)
+            @Html.TextBoxFor(m => m.Authors[0])
         </div>
         <div class="d-flex flex-column">
             @Html.Label(@Materials.Published)
             <input asp-for="Published" type="date">
+        </div>
+        <div class="d-flex flex-column">
+            @Html.Label(@Materials.Format)
+            @Html.TextBoxFor(m => m.Format)
         </div>
     </div>
     <input asp-for="Id" type="hidden"/>
