--- a/backend/Portal.UI-MVC-Web/Views/Video/AddOrEdit.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Video/AddOrEdit.cshtml
@@ -13,7 +13,7 @@
     }
 }
 
-@using(Html.BeginForm("AddOrEdit", "Book", FormMethod.Post))
+@using(Html.BeginForm("AddOrEdit", "Video", FormMethod.Post))
 {
     <div class="mb-2">
         <div class="d-flex flex-column">
@@ -22,7 +22,7 @@
         </div>
         <div class="d-flex flex-column">
             @Html.Label(@Materials.Duration)
-            <input asp-for="Duration" type="time">
+            <input asp-for="Duration" id="timepicker" type="text">
         </div>
         <div class="d-flex flex-column">
             @Html.Label(@Materials.Quality + ", pixels")
