Fix material partial view ajax bugs

--- a/backend/Portal.UI-MVC-Web/Views/Shared/_Layout.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/Portal.UI_MVC_Web.styles.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
-    await RenderSectionAsync("Styles", false)
+    @await RenderSectionAsync("Styles", false)
 </head>
 <body>
     <header>
