--- a/backend/Portal.UI-MVC-Web/Views/Video/_VideoPartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Video/_VideoPartial.cshtml
@@ -31,7 +31,7 @@
                     </a>
                 </td>
                 <td>
-                    <a class="btn btn-danger" url="@Url.Action("Delete", "Vidoe")" data_id="@video.Id">
+                    <a class="btn btn-danger" url="@Url.Action("Delete", "Video")" data_id="@video.Id">
                         @Actions.Delete
                     </a>
                 </td>
