--- a/backend/Portal.UI-MVC-Web/Views/Shared/_Layout.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Video" asp-action="Index">Videos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Perk" asp-action="Index">Perks</a>
+                        </li>
                     </ul>
                 </div>
             </div>
