--- a/backend/Portal.UI-MVC-Web/Views/Perk/_PerkPartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Perk/_PerkPartial.cshtml
@@ -2,7 +2,7 @@
 
 @model PerkIndexModel
 
-<table class="table table-hover" id="video-table">
+<table class="table table-hover" id="perk-table">
     <thead>
         <tr>
             <th scope="col">@Materials.Name</th>
