--- a/backend/Portal.UI-MVC-Web/Views/Perk/_PerkPartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Perk/_PerkPartial.cshtml
@@ -1,11 +1,11 @@
-﻿@using Portal.UI_MVC_Web.Resources
+﻿@    using Portal.UI_MVC_Web.Resources
 
 @model PerkIndexModel
 
 <table class="table table-hover" id="perk-table">
     <thead>
         <tr>
-            <th scope="col">@Materials.Name</th>
+            <th scope="col">@Objects.Name</th>
             <th scope="col" />
             <th scope="col" />
         </tr>
