--- a/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
@@ -5,9 +5,9 @@
 <table class="table table-hover" id="article-table">
     <thead>
         <tr>
-            <th scope="col">@Materials.Title</th>
-            <th scope="col">@Materials.Url</th>
-            <th scope="col">@Materials.Published</th>
+            <th scope="col">@Objects.Title</th>
+            <th scope="col">@Objects.Url</th>
+            <th scope="col">@Objects.Published</th>
             <th scope="col" />
             <th scope="col" />
         </tr>
