--- a/backend/Portal.UI-MVC-Web/Views/Book/_BookPartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Book/_BookPartial.cshtml
@@ -5,10 +5,10 @@
 <table class="table table-hover" id="book-table">
     <thead>
         <tr>
-            <th scope="col">@Materials.Title</th>
-            <th scope="col">@Materials.Author</th>
-            <th scope="col">@Materials.Published</th>
-            <th scope="col">@Materials.Format</th>
+            <th scope="col">@Objects.Title</th>
+            <th scope="col">@Objects.Author</th>
+            <th scope="col">@Objects.Published</th>
+            <th scope="col">@Objects.Format</th>
             <th scope="col" />
             <th scope="col" />
         </tr>
