--- a/backend/Portal.UI-MVC-Web/Views/Perk/AddOrEdit.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Perk/AddOrEdit.cshtml
@@ -17,7 +17,7 @@
 {
     <div class="mb-2">
         <div class="d-flex flex-column">
-            @Html.Label(@Materials.Name)
+            @Html.Label(@Objects.Name)
             @Html.TextBoxFor(m => m.Name)
         </div>
     </div>
