--- a/backend/Portal.UI-MVC-Web/Views/Video/_VideoPartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Video/_VideoPartial.cshtml
@@ -5,9 +5,9 @@
 <table class="table table-hover" id="video-table">
     <thead>
         <tr>
-            <th scope="col">@Materials.Title</th>
-            <th scope="col">@Materials.Duration</th>
-            <th scope="col">@Materials.Quality</th>
+            <th scope="col">@Objects.Title</th>
+            <th scope="col">@Objects.Duration</th>
+            <th scope="col">@Objects.Quality</th>
             <th scope="col" />
             <th scope="col" />
         </tr>
