--- a/backend/Portal.UI-MVC-Web/Views/Course/_CoursePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Course/_CoursePartial.cshtml
@@ -5,8 +5,8 @@
 <table class="table table-hover" id="course-table">
     <thead>
         <tr>
-            <th scope="col">@Objects.Title</th>
-            <th scope="col">@Objects.Author</th>
+            <th scope="col">@Objects.Name</th>
+            <th scope="col">@Objects.Description</th>
             <th scope="col" />
             <th scope="col" />
         </tr>
