--- a/backend/Portal.UI-MVC-Web/Views/Course/AddOrEdit.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Course/AddOrEdit.cshtml
@@ -63,6 +63,8 @@
         {
             <h3 class="text-center">@Headings.NoData</h3>
         }
+        <h2 class="text-center">@Headings.Books</h2>
+        <h3 class="text-center">@Headings.DataTable</h3>
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -78,6 +80,7 @@
                 @for (int i = 0; i < Model.Articles.Count(); ++i)
                 {
                     <input asp-for="Books[i].Id" type="hidden"/>
+                    <input asp-for="Books[i].Title" type="hidden"/>
                     <input asp-for="Books[i].PageCount" type="hidden"/>
                     <input asp-for="Books[i].Authors" type="hidden"/>
                     <input asp-for="Books[i].Published" type="hidden"/>
@@ -101,6 +104,46 @@
                         </td>
                         <td>
                             @Model.Books[i].Format
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>  
+        @if (Model.Articles.Any() is false)
+        {
+            <h3 class="text-center">@Headings.NoData</h3>
+        }
+        <h2 class="text-center">@Headings.Videos</h2>
+        <h3 class="text-center">@Headings.DataTable</h3>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">@Objects.Selected</th>
+                    <th scope="col">@Objects.Title</th>
+                    <th scope="col">@Objects.Duration</th>
+                    <th scope="col">@Objects.Quality</th>
+                </tr>
+            </thead>
+            <tbody>
+                @for (int i = 0; i < Model.Articles.Count(); ++i)
+                {
+                    <input asp-for="Videos[i].Id" type="hidden"/>
+                    <input asp-for="Videos[i].Title" type="hidden"/>
+                    <input asp-for="Videos[i].Duration" type="hidden"/>
+                    <input asp-for="Videos[i].Quality" type="hidden"/>
+
+                    <tr>
+                        <th scope="row">
+                            @Html.CheckBoxFor(m => m.Videos[i].IsSelected)
+                        </th>
+                        <th scope="row">
+                            @Model.Videos[i].Title
+                        </th>
+                        <td>
+                            @Model.Videos[i].Duration.ToString()
+                        </td>
+                        <td>
+                            @Model.Videos[i].Quality
                         </td>
                     </tr>
                 }
