--- a/backend/Portal.UI-MVC-Web/Views/Course/Details.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Course/Details.cshtml
@@ -8,11 +8,11 @@
 <div class="mb-2">
     <div class="d-flex flex-column">
         @Html.Label(@Objects.Name)
-        @Html.TextBox(Model.Name)
+        @Html.TextBoxFor(m => m.Name, new { @readonly = true })
     </div>
     <div class="d-flex flex-column">
         @Html.Label(@Objects.Description)
-        @Html.TextArea(Model.Description)
+        @Html.TextAreaFor(m => m.Description, new { @readonly = true })
     </div>
     <h2 class="text-center">@Headings.Articles</h2>
     <h3 class="text-center">@Headings.DataTable</h3>
@@ -45,6 +45,11 @@
     {
         <h3 class="text-center">@Headings.NoData</h3>
     }
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
     <h2 class="text-center">@Headings.Books</h2>
     <h3 class="text-center">@Headings.DataTable</h3>
     <table class="table table-hover">
@@ -84,6 +89,11 @@
     {
         <h3 class="text-center">@Headings.NoData</h3>
     }
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
     <h2 class="text-center">@Headings.Videos</h2>
     <h3 class="text-center">@Headings.DataTable</h3>
     <table class="table table-hover">
@@ -115,6 +125,11 @@
     {
         <h3 class="text-center">@Headings.NoData</h3>
     }
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
+    <div class="border-top my-3"></div>
     <h2 class="text-center">@Headings.Perks</h2>
     <h3 class="text-center">@Headings.DataTable</h3>
     <table class="table table-hover">
