--- a/backend/Portal.UI-MVC-Web/Views/Course/_CoursePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Course/_CoursePartial.cshtml
@@ -25,6 +25,9 @@
                     <a asp-controller="Course" asp-action="AddOrEdit" asp-route-id="@course.Id" class="btn btn-secondary">
                         @Actions.Edit
                     </a>
+                    <a asp-controller="Course" asp-action="Details" asp-route-id="@course.Id" class="btn btn-light">
+                        @Actions.Details
+                    </a>
                 </td>
                 <td>
                     <a class="btn btn-danger" url="@Url.Action("Delete", "Course")" data_id="@course.Id">
