Move resourse folder usings to the ViewStart

--- a/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/_ArticlePartial.cshtml
@@ -1,6 +1,4 @@
-﻿@using Portal.UI_MVC_Web.Resources
-
-@model ArticleIndexModel
+﻿@model ArticleIndexModel
 
 <table class="table table-hover" id="article-table">
     <thead>
