--- a/backend/Portal.UI-MVC-Web/Views/Book/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Book/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using Portal.UI_MVC_Web.Resources
-
-@model BookIndexModel
+﻿@model BookIndexModel
 
 @{
     Context.Session.SetString("LastUrl", Context.Request.Path);
