--- a/backend/Portal.UI-MVC-Web/Views/Book/_BookPartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Book/_BookPartial.cshtml
@@ -1,6 +1,4 @@
-﻿@using Portal.UI_MVC_Web.Resources
-
-@model BookIndexModel
+﻿@model BookIndexModel
 
 <table class="table table-hover" id="book-table">
     <thead>
