--- a/backend/Portal.UI-MVC-Web/Views/Course/Details.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Course/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using Portal.UI_MVC_Web.Resources
-@model CourseViewModel
+﻿@model CourseViewModel
 
 @{
     ViewData["Title"] = $"{Context.Request.RouteValues["controller"]} Details";
