--- a/backend/Portal.UI-MVC-Web/Views/Course/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Course/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using Portal.UI_MVC_Web.Resources
-
-@model CourseIndexModel
+﻿@model CourseIndexModel
 
 @{
     Context.Session.SetString("LastUrl", Context.Request.Path);
