--- a/backend/Portal.UI-MVC-Web/Views/Course/_CoursePartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Course/_CoursePartial.cshtml
@@ -1,6 +1,4 @@
-﻿@using Portal.UI_MVC_Web.Resources
-
-@model CourseIndexModel
+﻿@model CourseIndexModel
 
 <table class="table table-hover" id="course-table">
     <thead>
