--- a/backend/Portal.UI-MVC-Web/Views/Perk/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Perk/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using Portal.UI_MVC_Web.Resources
-
-@model PerkIndexModel
+﻿@model PerkIndexModel
 
 @{
     Context.Session.SetString("LastUrl", Context.Request.Path);
