--- a/backend/Portal.UI-MVC-Web/Views/Video/_VideoPartial.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Video/_VideoPartial.cshtml
@@ -1,6 +1,4 @@
-﻿@using Portal.UI_MVC_Web.Resources
-
-@model VideoIndexModel
+﻿@model VideoIndexModel
 
 <table class="table table-hover" id="video-table">
     <thead>
