--- a/backend/Portal.UI-MVC-Web/Views/Article/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Article/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using Portal.UI_MVC_Web.Resources
-
-@model ArticleIndexModel
+﻿@model ArticleIndexModel
 
 @{
     Context.Session.SetString("LastUrl", Context.Request.Path);
