--- a/backend/Portal.UI-MVC-Web/Views/Video/Index.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/Video/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using Portal.UI_MVC_Web.Resources
-
-@model VideoIndexModel
+﻿@model VideoIndexModel
 
 @{
     Context.Session.SetString("LastUrl", Context.Request.Path);
