--- a/backend/Portal.UI-MVC-Web/Views/_ViewImports.cshtml
+++ b/backend/Portal.UI-MVC-Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Portal.UI_MVC_Web
 @using Portal.UI_MVC_Web.Models
+@using Portal.UI_MVC_Web.Resources
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
